route-table-association.tf
resource "aws_route_table_association" "public_route_table_to_public_subnet" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}
