network-acl-rules.tf
resource "aws_network_acl_rule" "allow_mysql_inbound" {
  network_acl_id = aws_network_acl.private_network_acl.id
  rule_number    = 100
  protocol       = "tcp"
  rule_action    = "allow"
  egress         = false
  cidr_block     = "0.0.0.0/0"
  from_port      = 3306
  to_port        = 3306
}
